# FreeQDSK

./: .flake8  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml  pythonpackage.yml  tests.yml
docs/source/: _fileutils.rst  aeqdsk.rst  conf.py  geqdsk.rst  index.rst  peqdsk.rst
freeqdsk/: __init__.py  _aeqdsk.py  _fileutils.py  _typing.py  aeqdsk.py  geqdsk.py  peqdsk.py
freeqdsk/tests/: test_aeqdsk.py  test_fileutils.py  test_geqdsk.py
tests/: test_aeqdsk.py  test_fileutils.py  test_geqdsk.py  test_peqdsk.py  utils.py
tests/data/aeqdsk/: test_1.aeqdsk
tests/data/geqdsk/: README.md  test_1.geqdsk  test_2.geqdsk
